feat(k8s): use rececnt image
