# internal/adapters/http/handler/order_handler.go
@@ -37,7 +37,7 @@ func NewOrderHandler(orderUseCase usecase.OrderUseCase) OrderHandler {
 // @Produce     json
 // @Param       page     query     int    false  "Page number"        default(1)
 // @Param       pageSize query     int    false  "Number of items per page" default(10)
-// @Success     200      {object}  order_list_dto.PaginatedOrdersDTO
+// @Success     200      {object}  dto.PaginatedOrdersDTO
 // @Failure     400      {object}  ErrorResponse
 // @Failure     500      {object}  ErrorResponse
 // @Router      /admin/orders [get]
